# agent-run-supervisor

./: .gitignore  AGENTS.md  CHANGELOG.md  GOAL.md  LESSONS.md  LICENSE  Makefile  README.md  README.zh-CN.md  codecov.yml  pyproject.toml
.github/workflows/: release.yml  verify.yml
docs/: AI_FLOW.md  INDEX.md
docs/design/: architecture.md  result-event-schema.md  technical-solution.md  v0.1a-design.md  v0.1c-hitl-manual-real-run-design.md
docs/dev_log/: 2026-05-28-ai-flow-bootstrap.md  2026-05-28-phase-minus-1-acpx-contract-spike.md  2026-05-28-v0.1a-exec-only-vertical-slice.md  2026-05-29-goal-first-final-docs.md  2026-05-29-v0.1b-real-run-preflight-hardening.md  2026-05-29-v0.1c-hitl-manual-real-run-design-gate.md  2026-05-29-v0.1c-status-closure.md
docs/plans/: 2026-05-28-ai-flow-bootstrap.md  2026-05-28-phase-minus-1-acpx-contract-spike.md  2026-05-28-v0.1a-claude-main-context.md  2026-05-28-v0.1a-exec-only-vertical-slice.md  2026-05-29-e1-one-shot-exec-runner.md  2026-05-29-goal-first-final-docs.md  2026-05-29-v0.1b-claude-main-context.md  2026-05-29-v0.1b-real-run-preflight-hardening.md  2026-05-29-v0.1c-hitl-manual-real-run-design-gate.md  2026-05-29-v0.1c-status-closure.md  2026-05-30-s1a-session-contract-spike.md  2026-05-30-s1b-session-store-locks.md  2026-05-31-s1-closure-acceptance.md  2026-05-31-s1c-session-runtime-mvp.md  2026-05-31-s1d-session-lifecycle-completion.md  2026-06-01-h1-operational-hardening.md  2026-06-01-i1-local-caller-thin-integration.md  2026-06-01-k1-crash-recovery-hardening.md  2026-06-01-l1-concrete-caller-integration-design.md  2026-06-01-l2-hermes-caller-view-model-implementation.md  2026-06-01-p2-release-engineering.md  2026-06-12-phase-b-ars-evidence-hardening.md  2026-06-14-codex-acpx-smoke-helper.md  2026-07-05-live-event-streaming.md  2026-07-06-p3-engineering-basics.md  README.md
docs/practices/: README.md
docs/product/: prd.md
docs/roadmap/: MIGRATION.md  README.md  current-status.md  e1-one-shot-exec-runner-plan.md  features.md  implementation-plan.md  non-approvals.md  v0.1a-design-conformance.md  verification.md
fixtures/: README.md
fixtures/acpx-0.10.0/: README.md  manifest.json
fixtures/acpx-0.12.0/: README.md  manifest.json  session-contract-summary.json
scripts/: arsd_crash_containment_harness.py  capture_acpx_contract.py  clean.sh  release.sh  smoke_codex_acpx.py  smoke_installed_wheel.sh  smoke_persistent_session.py  validate_contract_fixtures.py  verify_local.sh
src/agent_run_supervisor/: __init__.py  __main__.py  caller.py  cli.py  commands.py  event_store.py  exit_classifier.py  goal.py  live_stream.py  managed_process.py  mcp_config.py  parser.py  policy.py  preflight.py  process_liveness.py  redaction.py  result.py  retention.py  role.py  runner.py  session.py  session_inspect.py  session_runtime.py  workspace.py
tests/: conftest.py  test_approval_card_e2e_fixture.py  test_caller.py  test_cli_commands.py  test_cli_smoke.py  test_event_store.py  test_exit_classifier.py  test_goal.py  test_live_event_stream.py  test_mcp_config.py  test_parser.py  test_parser_incremental.py  test_policy.py  test_preflight.py  test_process_liveness.py  test_redaction.py  test_result_event_schema.py  test_retention.py  test_role.py  test_runner_dry_run.py  test_runner_exec.py  test_session_inspect.py  test_session_runtime.py  test_session_store.py  test_session_strategy_guard.py  test_smoke_codex_acpx.py  test_smoke_persistent_session.py  test_static_safety_scan.py  test_validate_contract_fixtures.py  test_verifier_lock_gates.py  test_version_sync.py  test_workspace_gate.py
tests/arsd/: test_admission.py  test_client_daemon.py  test_handlers_registry.py  test_protocol.py  test_real_socket_acceptance.py  test_reconcile.py  test_server_auth.py  test_service_unit.py
tests/hermes_caller/: conftest.py  test_event_cursor.py  test_events.py  test_feishu_adapter.py  test_hermes_exec_flow.py  test_hermes_session_flow.py  test_intake.py  test_verdict.py  (+2 more)
tools/: build_docs_index.py  bump_version.py  check_roadmap_governance.py  check_version_sync.py  docs_drift_signal.py  static_safety_scan.py
(+255 files in other folders)
