[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-run-supervisor"
version = "0.0.0"
description = "Supervise external AGENT runs through acpx/ACP with auditable artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
agent-run-supervisor = "agent_run_supervisor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_run_supervisor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
